2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10133: Command execution in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-18  Francois Suter  <francois@typo3.org>

	* Cleanup #10125: Replace deprecated function calls in sysext indexed_search (thanks to Markus Krause)

2009-01-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7677: Constants are not correctly substituted on some PHP5 distributions

2009-01-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10157: t3lib/config_default.php textfile_ext should be updated to include xml and other text types

2009-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10143 spamProtectEmailAddresses_atSubst does not work correctly if linktext contains email address with uppercase charachters (thanks to Helmut Hummel)

2009-01-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10116: Remove/protect adodb testfiles (thanks to Marcus Krause)

2009-01-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10109: Google reports duplicate title tag
	* Fixed bug #10120: Add .buildpath to svn:ignore

2009-01-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7265: Submodules of Web module can't work with mod.php and the _DISPATCH system

2009-01-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10083: Constant styles.content.imgtext.separateRows is not defined

2009-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9194: Bug: wrong handling of 'is_in' list in TCA element type 'input' (Thanks to Vladimir Podkovanov)

2009-01-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10055: Add contrib directory to list of allowed paths (thanks to Dan Osipov)
	* Fixed bug 10056: Misspelling english word "guesbooks"

2009-01-03  Dmitry Dulepov  <dmitry@typo3.org>
