@@ -1,3 +1,7 @@
+2009-01-20  Ingo Renner  <ingo@typo3.org>
+
+	* Fixed bug #10154: Weak encryption key generation vulnerability in sysext install (thanks to the TYPO3 Security Team, and especially Marcus Krause)
+
 2005-04-11  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Now database host names can contain colons ":" so you can also specify ports like "localhost:3306"
